--- a/ms-curso-service/pom.xml
+++ b/ms-curso-service/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>pe.edu.upeu</groupId>
-    <artifactId>ms-curso</artifactId>
+    <artifactId>ms-curso-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>ms-curso</name>
-    <description>ms-curso</description>
+    <name>ms-curso-service</name>
+    <description>ms-curso-service</description>
     <url/>
     <licenses>
         <license/>
@@ -40,6 +40,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
@@ -48,11 +53,6 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <scope>runtime</scope>
-        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
